# Learn_Django

./: .gitignore  manage.py  pyproject.toml  requirements.txt
apps/blog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/blog/migrations/: 0001_initial.py
apps/blog/models/: __init__.py  author.py  category.py  post.py
apps/blog/static/blog/: blog_styles.css
apps/blog/templates/: blog_posts.html  home.html  post_detail.html  upload.html
apps/blog/templates/blog/: home.html  post_confirm_delete.html  post_detail.html  post_form.html  posts_list.html  upload_avatar.html
apps/blog/views/: post_views.py
apps/books/: apps.py  models.py  urls.py
apps/orders/: urls.py
apps/shop/: apps.py  models.py  urls.py  views.py
apps/shop/templates/shop/: category_detail.html  home.html  product_detail.html
apps/users/: apps.py
config/: urls.py
config/settings/: base.py  dev.py  dev_mysql.py  dev_pg.py  dev_sqlite.py  prod.py
static/css/: styles.css
templates/: 404.html  about.html  base.html
templates/partials/: footer.html  header.html
