[project]
name = "mysite"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergii",email = "zx9289@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0,<7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
